--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_console
-	previous = 
-	base = 20c89110fc94
+	previous = 20c89110fc94
+	base = 9d82100c4042
 	trim = 
 	trimbase = 
