--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt_console
+	parent = release/rolling/rqt_console/2.2.1-2
 	previous = 20c89110fc94
 	base = 3d0f0a7d841f
 	trim = 
